[package]
name = "cyber_crush_authentication_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres"] }
argon2 = "0.5.3"
rand = "0.9.2"
hex = "0.4.3"

