[package]
name = "cyber_crush_chat_server"
version = "0.1.0"
edition = "2024"

[dependencies]
shared_server_lib = { path = "../shared_server_lib" }

axum = { version = "0.8.4", features = ["ws"] }
tokio = { version = "1.47.1", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
chrono = { version = "0.4.42", features = ["serde"] }
futures = "0.3.31"
dashmap = "6.1.0"
futures-util = "0.3.31"
